--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather Checker</title>
-    <link rel="stylesheet" href="./assets/styles.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="./assets/styles.css">
 </head>
 
 <body>
@@ -14,28 +15,39 @@
         <div class="search">
             <!--https://www.w3schools.com/howto/tryit.asp?filename=tryhow_css_search_button-->
             <form class="searchBtn" style="margin:auto;max-width:300px">
-                <input type="text" placeholder="Search..">
+                <input type="text" class="searchBar" placeholder="Search..">
                 <button type="submit"><i class="fa fa-search"></i></button>
             </form>
         </div>
-
-        <div class="loadingPage">
+        
+        <!--Current Day-->
+        <div class="weatherPage" id="1">
             <h2 class="city">Weather in San Diego</h2>
             <h1 class="temp">100°F</h1>
             <div class="flex">
                 <img src="https://openweathermap.org/img/wn/04n.png" alt="" class="icon" />
+                <div class="description">Cloudy</div>
             </div>
-            <div class="description">Cloudy</div>
             <div class="humidity">Humidity: 100%</div>
             <div class="wind">Wind speed: 10mph</div>
-    </div>
-        </div>
-        <div class="searchHistory">
-            <h2 class="cityChecked">History of Searched Cities: </h2>
-            <button class="clearBtn">Clear</button>
-            <ul class ="list"></ul>
         </div>
 
+        
+
+    </div>
+
+
+
+    <div class="searchHistory">
+        <h2 class="cityChecked">History of Searched Cities: </h2>
+        <button class="clearBtn">Clear</button>
+        <ul class="list"></ul>
+    </div>
+
 </body>
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+<script src="./assets/index.js"></script>
 
 </html>
