--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <div class="weather">
+    <div class="weather float-left">
         <div class="search">
             <!--https://www.w3schools.com/howto/tryit.asp?filename=tryhow_css_search_button-->
             <h1 class="city text-center">Weather in: </h1>
@@ -23,8 +23,12 @@
             </form>
         </div>
     </div>
-
-    <div class="weatherContainer">
+    <div class="searchHistory d-none">
+        <h2 class="cityChecked">History of Searched Cities: </h2>
+        <button class="clearBtn">Clear</button>
+    </div>
+    
+    <div class="weatherContainer float-right">
         <!--Current Day-->
         <div class="weatherPage d-none" id="day1">
             <h1 class="time">Monday</h1>
@@ -87,11 +91,6 @@
 
 
 
-    <div class="searchHistory d-none">
-        <h2 class="cityChecked">History of Searched Cities: </h2>
-        <button class="clearBtn">Clear</button>
-        <ul class="list"></ul>
-    </div>
 
 </body>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
