ran out of api usages

--- a/index.html
+++ b/index.html
@@ -23,12 +23,11 @@
             </form>
         </div>
     </div>
-    <div class="searchHistory d-none">
+    <div class="searchHistory d-none float-left">
         <h2 class="cityChecked">History of Searched Cities: </h2>
-        <button class="clearBtn">Clear</button>
     </div>
     
-    <div class="weatherContainer float-right">
+    <div class="weatherContainer">
         <!--Current Day-->
         <div class="weatherPage d-none" id="day1">
             <h1 class="time">Monday</h1>
