--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 </head>
 
 <body>
-    <div class="weather float-left">
+
+    <div class="weather float-left d-block">
         <div class="search">
             <!--https://www.w3schools.com/howto/tryit.asp?filename=tryhow_css_search_button-->
             <h1 class="city text-center">Weather in: </h1>
@@ -26,7 +27,7 @@
     <div class="searchHistory d-none float-left">
         <h2 class="cityChecked">History of Searched Cities: </h2>
     </div>
-    
+   
     <div class="weatherContainer">
         <!--Current Day-->
         <div class="weatherPage d-none" id="day1">
